The patient record create , edit and maintain pages are createdand others tasks which are related with the project.

--- a/CIMS.Web/Views/Shared/_Sidebar.cshtml
+++ b/CIMS.Web/Views/Shared/_Sidebar.cshtml
@@ -14,8 +14,8 @@
         @* END Search *@
         @* BEGIN Menu *@
         <ul class="sidebar-menu">
-            <li class="header">HEADER</li>
-            <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
+            <li class="header">Menu</li>
+            <li class="active"><a href="~/PatientRecord/PatientInformation/"><i class="fa fa-link"></i> <span>Patient</span></a></li>
             <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
             <li class="treeview">
                 <a href="#">
