--- a/CIMS.Web/Areas/PatientRecord/Views/PatientInformation/Delete.cshtml
+++ b/CIMS.Web/Areas/PatientRecord/Views/PatientInformation/Delete.cshtml
@@ -1,16 +1,31 @@
-﻿@model CIMS.Model.Models.Labratory
+﻿@model CIMS.Model.Models.MedicalService
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Labratory</h4>
+    <h4>MedicalService</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.ServiceType.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ServiceType.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Code)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Code)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -20,35 +35,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.Price)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.Price)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NStartingValue)
+            @Html.DisplayNameFor(model => model.Remark)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.NStartingValue)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NEndingValue)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NEndingValue)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LabCategoryID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LabCategoryID)
+            @Html.DisplayFor(model => model.Remark)
         </dd>
 
     </dl>
